# brainflux

./: .gitignore  Cargo.toml  LICENSE  README.md  compile.sh  hello  hello.s  long  long.s  mandel  mandel.s  serptri  serptri.s  test
benches/: mandel  mandel.b  mandel.s  test-opt.b  test.b
bfcheck/: bf  bfcheck.pl  output.s  prog.s
etc/: memory_scan_example.c
src/: arm_compiler.rs  cli.rs  implementation.rs  interpreter.rs  lib.rs  llvm_compiler.rs  loops.rs  macros.rs  main.rs  optimization.rs  optimize.rs  profiler.rs
tests/: functional_tests.rs  run_tests.rs
tests/bfcheck/: bfcheck.pl  delete-extra-generated.sh
tests/expected/: loop_profiler.bf
tests/functionaltesting/expected/: hello.bf
tests/functionaltesting/outputs/: loop_profiler.txt
tests/outputs/: hello.s  hello_optimized.s
