[package]
name = "brainflux"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
inline_colorization = "=0.1.6"
prettytable = "0.10.0"
inkwell = { version = "0.5.0", features = ["llvm18-0"] }

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
